# goldfish-loss

./: .flake8  .gitignore  README.md  install.sh  pyproject.toml  requirements-all.txt  requirements.txt
axonn_fabric/: __init__.py  fabric.py  hf_llama_tensor_parallel.py  megatron_logging.py
data_checks/: count_token_lengths.py
eval/: alpaca_eval_generate.py  conversation.py  data_extraction.py  eval_retrieval_anticausal.py  factmem_rephrase.py  mauve_comp.py  mia.py  mia_eval.ipynb
launch_scripts/: launch_jobs_1b_hashtable.sh.sh  launcher.py
launch_scripts/config/: config_quick_run.yaml  tinyllama-1b-control.yaml  tinyllama-1b-equal-supervised-tokens_.yaml  tinyllama-1b-equal-supervised-tokens_mbs11.yaml  tinyllama-1b-equal-supervised-tokens_mbs8.yaml  tinyllama-1b.yaml
lit_gpt/: config.py  data_loading_utils.py  data_scheduler_utils.py  doc_block_utils.py  ds_optimization.py  huggingface_dataset.py  model.py  model_axonn.py  multiple_negative_ranking_loss.py  packed_cycle_dataset.py  retrieval_attn_utils.py  retrieval_evaluator.py  retrieval_model.py  tokenizer.py  utils.py
pretrain_umd/: train.py
scripts/: check_model_exists.py  convert_checkpoint_to_hf.py  convert_hf_checkpoint.py  convert_lit_checkpoint.py  convert_lit_ckpt.sh  prepare_hf.py  prepare_redpajama.py  prepare_retrieval_data.py  push_to_hub.py  simulate_lr.py  split_hf_dataset.py
